add auth controller + update swagger
